package configtx

import (
	"bytes"
	"testing"

	"github.com/golang/protobuf/proto"
	"github.com/hyperledger/fabric-config/protolator"
	cb "github.com/hyperledger/fabric-protos-go/common"
	"github.com/stretchr/testify/assert"
	pb "gitlab.n-t.io/core/library/hlf-tool/hlf-control-plane/proto"
)

const (
	rootCert0 = `-----BEGIN CERTIFICATE-----
MIICFDCCAbugAwIBAgIUG9766m3U+FGcBTNJwJcp78gQmGkwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMzgxMDIxMTI0MDAwWjBnMQswCQYD
VQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNVBAcTBk1vc2Nv
dzENMAsGA1UEChMEb3JnMDELMAkGA1UECxMCVVMxEjAQBgNVBAMTCWZhYnJpYy1j
YTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABNAj27nvutT9kelkr5I6GNvXWPTr
JzrsV57sFA/O2S/8Pk/F0HA+oGN9x7TQr2kfYj1n+ZLGZGq09Vit39+mcTGjRTBD
MA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAGAQH/AgEBMB0GA1UdDgQWBBR4
msIBEMRoUCY+jJldn7eBfX+M3TAKBggqhkjOPQQDAgNHADBEAiAkhcimoKRhf90X
76y0CVNuxshSKoaK/MyHHinq5w2EqQIgUQFgvvsLGeHxvENvauIUKXleAM4hV2B/
D68kYwuvn64=
-----END CERTIFICATE-----
`

	rootCert1 = `-----BEGIN CERTIFICATE-----
MIICFTCCAbugAwIBAgIUDRrzw7CoHedf2IXXvt6DK1kGxncwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMzgxMDIxMTI0MDAwWjBnMQswCQYD
VQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNVBAcTBk1vc2Nv
dzENMAsGA1UEChMEb3JnMTELMAkGA1UECxMCVVMxEjAQBgNVBAMTCWZhYnJpYy1j
YTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABAE7U3jhbDPlG8tfm57tlEYF5APs
qU9xxk1gdA3q2DkiXDggxioDbCIKouMpoi4/sQAvQh3sJOiQaF884bIrRkqjRTBD
MA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAGAQH/AgEBMB0GA1UdDgQWBBRH
zRXoPtPPcgmN0N8pXx9quDveEzAKBggqhkjOPQQDAgNIADBFAiEAwdaXz7YYH9UC
JDCZQFpUfIJcbZ4C1LMMnHxvoZeHPecCIEXgzEcYJzSEI61VuwJoC/jXEvKp0n0s
wFxgscwqJ318
-----END CERTIFICATE-----
`

	ordCert01 = `-----BEGIN CERTIFICATE-----
MIIDUDCCAvagAwIBAgIUEcIPRsp9WEURphUsvo5gjvyitA0wCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0NzAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMS5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAATXTKhBj/3IrHYxilYiqbFbHN35
ZHgGBgz5Ii6hshWCAINRrjS1azscXicjsEMjdg50Pi05Bvkc9U+WCLmi7DL2o4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBQKOZZelHi2q/tcVc36zloju7Mu
sTAfBgNVHSMEGDAWgBR4msIBEMRoUCY+jJldn7eBfX+M3TA/BgNVHREEODA2gjRw
cm9kLW9yZzAtb3JkZXJlci0wMDEuaW50ZXJuYWwub3JnMC5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMC1vcmRlcmVyLTAwMS5pbnRlcm5h
bC5vcmcwLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNIADBFAiEAwKf2owc2pWpnP15zTcx1TSj5brEvCNqPi9HAjjSD
mlQCIGAolf9bhDqpFBiOn0J+FmqzrQNIvd5obuOdvvV4stGC
-----END CERTIFICATE-----
`

	ordCert02 = `-----BEGIN CERTIFICATE-----
MIIDUDCCAvagAwIBAgIUS84UaUGT+qVcniOsGyltbkUSvZcwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0NzAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMi5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAT/6jUHPoSGcsojLq5Q/OzsGSKm
2se2fpv/nwJiq4Od2532HrIOgu2XJVQyDHlkzpkvD7zaFz5LR6/kurNuEwUjo4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBStqqMrGzNzl4Rwwkd8nrxFBSsT
YTAfBgNVHSMEGDAWgBR4msIBEMRoUCY+jJldn7eBfX+M3TA/BgNVHREEODA2gjRw
cm9kLW9yZzAtb3JkZXJlci0wMDIuaW50ZXJuYWwub3JnMC5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMC1vcmRlcmVyLTAwMi5pbnRlcm5h
bC5vcmcwLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNIADBFAiEAoQTqlnOglkBqHKGKYhjIHPmkChbSZ06YLIXliAaa
9yMCIDfG+yF4Z7wjwH53/lJxVHAQOfWhbXBdoQWEok1bq3Sr
-----END CERTIFICATE-----
`

	ordCert03 = `-----BEGIN CERTIFICATE-----
MIIDTzCCAvagAwIBAgIUICENKoyMuLvBkTZ5C3SpTahBgv4wCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0ODAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMy5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARJdYRZFHBbKafcC3abOEHPUHr6
RKUQejZMcw9NBLuE2+ZvJCTOZr2BfhxYVpmSuW01rCN6XRP0bP18vtnNfBl7o4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBQHMWrmnEzB9Jel4A5MotZzGx/U
EDAfBgNVHSMEGDAWgBR4msIBEMRoUCY+jJldn7eBfX+M3TA/BgNVHREEODA2gjRw
cm9kLW9yZzAtb3JkZXJlci0wMDMuaW50ZXJuYWwub3JnMC5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMC1vcmRlcmVyLTAwMy5pbnRlcm5h
bC5vcmcwLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNHADBEAiBo2Yu3ACSzVKdRJyYuw3rYftCfT/9HgLWHys2L2gjE
FgIgGgtgrkFpjlVC13+D0ZmHA3fMGndZ4jbZwLdkkmyIQv8=
-----END CERTIFICATE-----
`

	ordCert04 = `-----BEGIN CERTIFICATE-----
MIIDUDCCAvagAwIBAgIUaw4QEHAsVkySnvp/3fkRpIs76d0wCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0ODAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwNC5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQkxLzwZ0I/DM7oaN7oP8My9bMX
R5QUlwT4r03w8OaB9PrBvmMfqzxzoekVsHa6XHTnZ7GkaFayqqxZxAQsif1Qo4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBSzvIEPsizrm5U3BVn78XRz+4/o
LjAfBgNVHSMEGDAWgBR4msIBEMRoUCY+jJldn7eBfX+M3TA/BgNVHREEODA2gjRw
cm9kLW9yZzAtb3JkZXJlci0wMDQuaW50ZXJuYWwub3JnMC5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMC1vcmRlcmVyLTAwNC5pbnRlcm5h
bC5vcmcwLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNIADBFAiEAzbcvhtV9j7LgbUTg7VpWQPFIR47yuSxEr8NlZ9vU
UJQCIA+gwMYYd9blCLe3tGzX3RCcT56tiD7WE7cuMnDFYcJo
-----END CERTIFICATE-----
`

	ordCert11 = `-----BEGIN CERTIFICATE-----
MIIDUDCCAvagAwIBAgIUI3QDjdXa73YGysxta/xSVYhIUsEwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0OTAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMS5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQsJS+QWL/MHcvGck+10sgeK6q9
b6H0g+t0MXd2WvVWE6L3iApqUoWbhvVWCdbU/REcA5gSCTfOFTttoWfScYvyo4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBTM5D4OYty2rFzrpMiZkhREC5Y4
HDAfBgNVHSMEGDAWgBRHzRXoPtPPcgmN0N8pXx9quDveEzA/BgNVHREEODA2gjRw
cm9kLW9yZzEtb3JkZXJlci0wMDEuaW50ZXJuYWwub3JnMS5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMS1vcmRlcmVyLTAwMS5pbnRlcm5h
bC5vcmcxLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNIADBFAiEAgEJkp52Tz3DVvE/Eeh+JTtk6ynvm4HilLV7NHjqm
8kwCIAhBnJG+2uXxNjwAQFnggQ+g2fY+zCHlCCDCv9TneWxa
-----END CERTIFICATE-----
`

	ordCert12 = `-----BEGIN CERTIFICATE-----
MIIDUDCCAvagAwIBAgIUV0aIxhOnkMtqXjZv2w8cv2VDGZcwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0OTAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMi5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARLr6kAdfRddaD6owBfdYMoBAm+
Is29KEhmGszdJ0EuL+TVY8MWx1l+fshJelHHPdnAdxlfUFlLEQxpaNxePsuio4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBT3tLP4xSjgA3F7u4XYJVA1NzkA
czAfBgNVHSMEGDAWgBRHzRXoPtPPcgmN0N8pXx9quDveEzA/BgNVHREEODA2gjRw
cm9kLW9yZzEtb3JkZXJlci0wMDIuaW50ZXJuYWwub3JnMS5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMS1vcmRlcmVyLTAwMi5pbnRlcm5h
bC5vcmcxLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNIADBFAiEAzWm5odcGg6WSWtXcltcWMv5N3N9gSsNCOFgURF9Z
TBgCID0oQpvrAl6yPy/pfThMi0VS5Rk9N7K4ucsM1S7LiUF0
-----END CERTIFICATE-----
`

	ordCert13 = `-----BEGIN CERTIFICATE-----
MIIDTzCCAvagAwIBAgIUTL4XThhEReDaLB3kT/FFcEkeChAwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI1MDAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMy5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQP7siODBkH93/tRfl4lrGOLSaD
PwL68pmRw0vqX1OLZi0SYLWquvQd1xYurpPDCXNJ1cwm9VUn4ATFivj5tEfoo4IB
TTCCAUkwDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEF
BQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBSx35MNiz3s3I29yfCb/haLWklx
czAfBgNVHSMEGDAWgBRHzRXoPtPPcgmN0N8pXx9quDveEzA/BgNVHREEODA2gjRw
cm9kLW9yZzEtb3JkZXJlci0wMDMuaW50ZXJuYWwub3JnMS5wcm9kLmNvcmUubi10
LmlvMIGIBggqAwQFBgcIAQR8eyJhdHRycyI6eyJoZi5BZmZpbGlhdGlvbiI6IiIs
ImhmLkVucm9sbG1lbnRJRCI6InByb2Qtb3JnMS1vcmRlcmVyLTAwMy5pbnRlcm5h
bC5vcmcxLnByb2QuY29yZS5uLXQuaW8iLCJoZi5UeXBlIjoib3JkZXJlciJ9fTAK
BggqhkjOPQQDAgNHADBEAiAIQHv52MjCfn0hyHB+jH5KGEB/nrr4Kow68nJQllRB
7gIgMpnLjP+/lXC1OzZ1BBaGyh8IAdjalewsrx9Td3KQamw=
-----END CERTIFICATE-----
`

	ident01 = `-----BEGIN CERTIFICATE-----
MIIDMDCCAtegAwIBAgIUcfv4t6ohigjgty+QxusWgIL5s5gwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0NzAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMS5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARxgZW7amLv/fUErzoAiarE4pL4
0k1gfPClHKLUbFUmc4h9ApMkW6QPLy5nSUJplQL7G8MNBqpeNxeFMlx20CBjo4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFPiE
fU+KXNkuUGSgx1s+xLFO8onqMB8GA1UdIwQYMBaAFHiawgEQxGhQJj6MmV2ft4F9
f4zdMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMC1vcmRlcmVyLTAwMS5pbnRlcm5hbC5v
cmcwLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcwLW9y
ZGVyZXItMDAxLmludGVybmFsLm9yZzAucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0cAMEQCIF126CCWzKG7orXBpgFC
WdYSsky7tzMAygHAee7J4JV0AiACdAG7UxHTpaEKuc8Y2ochwJTWMzo1CXROUbPu
WU5mhg==
-----END CERTIFICATE-----
`

	ident02 = `-----BEGIN CERTIFICATE-----
MIIDMDCCAtegAwIBAgIUZdNRSkfkf3QS5pObw0Y08Av/muswCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0NzAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMi5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAShk82js08r6T8+y1rD1WM6MMvc
iEOV3/K/4i8yfU2CI65wnrbYu6G9DcBE3r/E0KvCZ/qmTF8fwNG3jllOsDzqo4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFCcL
wlCmX3ppeoBvXqwv8utrFxguMB8GA1UdIwQYMBaAFHiawgEQxGhQJj6MmV2ft4F9
f4zdMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMC1vcmRlcmVyLTAwMi5pbnRlcm5hbC5v
cmcwLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcwLW9y
ZGVyZXItMDAyLmludGVybmFsLm9yZzAucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0cAMEQCIAhGlHX1PMp3VjiWm5r8
IfRHStysEL3DLjYQiQkLNO9LAiAs+061qtE0wg7szdV+NURXA/Uzb++dEhQBBpCW
emr6MA==
-----END CERTIFICATE-----
`

	ident03 = `-----BEGIN CERTIFICATE-----
MIIDMTCCAtegAwIBAgIURrjvTnxsU2FRhm0kmihANtqBM4cwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0ODAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwMy5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQbssgVCPhglBKWq3KNBldjaDZi
a1uaY9i8xkf7NSY1XUMSi3U9EOoX44hRPzECWxwTYLMFQGJfYT/DXyC/FOvgo4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFFyD
tgwCRlAy5FZoI7/O1SWkYDPkMB8GA1UdIwQYMBaAFHiawgEQxGhQJj6MmV2ft4F9
f4zdMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMC1vcmRlcmVyLTAwMy5pbnRlcm5hbC5v
cmcwLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcwLW9y
ZGVyZXItMDAzLmludGVybmFsLm9yZzAucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0gAMEUCIQDuAk5OsRKsa3Lnm9bp
1RwnjYpS5kV3mF4JqiiwxWEadQIgSC2uPayzj2dPwa9b5bCNznDxbwYq/58NJRTz
OPs37cM=
-----END CERTIFICATE-----
`

	ident04 = `-----BEGIN CERTIFICATE-----
MIIDMDCCAtegAwIBAgIUJQB8hTdVjQw1UFThkhh8gPT+yIQwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzAxCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0ODAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzAxEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMC1vcmRlcmVyLTAwNC5pbnRlcm5hbC5vcmcwLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQ1DX3i7XerCGhDGYR3R5TBKNPU
SphxLQLz2epfzfI9KWjkvtdqUg2v0d9/f0IgfGg3Jmd/KwA1A7Jvwq3NyeP4o4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFKAR
+9FFQllgA2wPR4bOHV6ILyFZMB8GA1UdIwQYMBaAFHiawgEQxGhQJj6MmV2ft4F9
f4zdMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMC1vcmRlcmVyLTAwNC5pbnRlcm5hbC5v
cmcwLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcwLW9y
ZGVyZXItMDA0LmludGVybmFsLm9yZzAucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0cAMEQCIB1kc8EaD3MvMdg4JJIN
k41ij7VhLws10xMl2EMyJ36VAiAIG5KbpYBn1hyBN+mFn+X4Nkh9deyYGut89b0i
3jJlIw==
-----END CERTIFICATE-----
`

	ident11 = `-----BEGIN CERTIFICATE-----
MIIDMTCCAtegAwIBAgIUSl4zHJ50F0OfgMn7m/z1GwQ6v3wwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0OTAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMS5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAASRVx6ahF5GYFaBIUSBsWDR+VnV
p0OWHXpcktNRfoR0Q+UzrgtNtYW+rFkd20BBsCjLCJSxUQVgto9ta22beB5ro4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFPOL
BoyannLabKgMK6QxRGoYgd12MB8GA1UdIwQYMBaAFEfNFeg+089yCY3Q3ylfH2q4
O94TMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMS1vcmRlcmVyLTAwMS5pbnRlcm5hbC5v
cmcxLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcxLW9y
ZGVyZXItMDAxLmludGVybmFsLm9yZzEucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0gAMEUCIQCjxL49ikx8rZ+QxsIS
vtbHS9TGQWIfO8upjC13/ZMtKgIgZdInxdM+DPiJ79gXH3opAIQOdR9KTxgcqj3a
rmE5dLI=
-----END CERTIFICATE-----
`

	ident12 = `-----BEGIN CERTIFICATE-----
MIIDMDCCAtegAwIBAgIUQOKSB2jxMzNAker0ArkQ63PcZ9wwCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI0OTAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMi5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAQBzNNumjD5XbI6+lmLLHVMl/B5
auTLLC9iUrCSg+xUDqEIFi+3HUl02TavKPYAekev0ray2MOVpfrIGb1HmlyCo4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFNXT
LDu0gJcr3CHrX66vhRB7NPCmMB8GA1UdIwQYMBaAFEfNFeg+089yCY3Q3ylfH2q4
O94TMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMS1vcmRlcmVyLTAwMi5pbnRlcm5hbC5v
cmcxLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcxLW9y
ZGVyZXItMDAyLmludGVybmFsLm9yZzEucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0cAMEQCIG/1PxpVzz1emOsMF37J
EJMnIWhkt1X/KynjcmBVZ37zAiA9/p9Rr7CJbY1aTQ1H6BOiAERqVJLsb9vfP6MB
hwzHYg==
-----END CERTIFICATE-----
`

	ident13 = `-----BEGIN CERTIFICATE-----
MIIDMTCCAtegAwIBAgIUXLP9BTdmw4qpx7CeTv+ziblxBIowCgYIKoZIzj0EAwIw
ZzELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
EwZNb3Njb3cxDTALBgNVBAoTBG9yZzExCzAJBgNVBAsTAlVTMRIwEAYDVQQDEwlm
YWJyaWMtY2EwHhcNMjMxMDI1MTI0MDAwWhcNMjQxMDI0MTI1MDAwWjCBlzELMAkG
A1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQHEwZNb3Nj
b3cxDTALBgNVBAoTBG9yZzExEDAOBgNVBAsTB29yZGVyZXIxPTA7BgNVBAMTNHBy
b2Qtb3JnMS1vcmRlcmVyLTAwMy5pbnRlcm5hbC5vcmcxLnByb2QuY29yZS5uLXQu
aW8wWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAAT8E0zZbbdZx2/G6CzIhy0mV1F3
jWGCZkrxRJTx5UZfcTDnMnyxUd6MbSPetF1HNVswCLiEbr5CoomYvhzD+WnMo4IB
LjCCASowDgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFP7w
ChKmPqTRzabPmuwOw5YGff+OMB8GA1UdIwQYMBaAFEfNFeg+089yCY3Q3ylfH2q4
O94TMD8GA1UdEQQ4MDaCNHByb2Qtb3JnMS1vcmRlcmVyLTAwMy5pbnRlcm5hbC5v
cmcxLnByb2QuY29yZS5uLXQuaW8wgYgGCCoDBAUGBwgBBHx7ImF0dHJzIjp7Imhm
LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoicHJvZC1vcmcxLW9y
ZGVyZXItMDAzLmludGVybmFsLm9yZzEucHJvZC5jb3JlLm4tdC5pbyIsImhmLlR5
cGUiOiJvcmRlcmVyIn19MAoGCCqGSM49BAMCA0gAMEUCIQDZhTBzVBx7bzSiCU+S
vs0R4luR+PHCJw6axdXBo7EawgIgVgZ3IJGMOpoe39T0ZEvU2iOFuJdRiNpFVUSU
JZ8le1w=
-----END CERTIFICATE-----
`
)

var req = &pb.ChannelCreateRequest{
	ChannelName: "mychannel",
	Organizations: []*pb.Organization{
		{
			Name:         "org0",
			Id:           "org0",
			RootCerts:    []byte(rootCert0),
			TlsRootCerts: []byte(rootCert0),
			Policies: []*pb.Policy{
				{
					Name: "Readers",
					Type: "Signature",
					Rule: "OR('org0.member')",
				},
				{
					Name: "Writers",
					Type: "Signature",
					Rule: "OR('org0.member')",
				},
				{
					Name: "Admins",
					Type: "Signature",
					Rule: "OR('org0.admin')",
				},
				{
					Name: "Endorsement",
					Type: "Signature",
					Rule: "OR('org0.peer')",
				},
			},
			Orderers: []*pb.Orderer{
				{
					Host:     "prod-org0-orderer-001.internal.org0.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert01),
					CaCerts:  [][]byte{[]byte(ordCert01)},
					Identity: []byte(ident01),
				},
				{
					Host:     "prod-org0-orderer-002.internal.org0.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert02),
					CaCerts:  [][]byte{[]byte(ordCert02)},
					Identity: []byte(ident02),
				},
				{
					Host:     "prod-org0-orderer-003.internal.org0.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert03),
					CaCerts:  [][]byte{[]byte(ordCert03)},
					Identity: []byte(ident03),
				},
				{
					Host:     "prod-org0-orderer-004.internal.org0.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert04),
					CaCerts:  [][]byte{[]byte(ordCert04)},
					Identity: []byte(ident04),
				},
			},
		},
		{
			Name:         "org1",
			Id:           "org1",
			RootCerts:    []byte(rootCert1),
			TlsRootCerts: []byte(rootCert1),
			Policies: []*pb.Policy{
				{
					Name: "Readers",
					Type: "Signature",
					Rule: "OR('org1.member')",
				},
				{
					Name: "Writers",
					Type: "Signature",
					Rule: "OR('org1.member')",
				},
				{
					Name: "Admins",
					Type: "Signature",
					Rule: "OR('org1.admin')",
				},
				{
					Name: "Endorsement",
					Type: "Signature",
					Rule: "OR('org1.peer')",
				},
			},
			Orderers: []*pb.Orderer{
				{
					Host:     "prod-org1-orderer-001.internal.org1.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert11),
					CaCerts:  [][]byte{[]byte(ordCert11)},
					Identity: []byte(ident11),
				},
				{
					Host:     "prod-org1-orderer-002.internal.org1.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert12),
					CaCerts:  [][]byte{[]byte(ordCert12)},
					Identity: []byte(ident12),
				},
				{
					Host:     "prod-org1-orderer-003.internal.org1.prod.core.n-t.io",
					Port:     7050,
					Cert:     []byte(ordCert13),
					CaCerts:  [][]byte{[]byte(ordCert13)},
					Identity: []byte(ident13),
				},
			},
		},
	},
}

func TestGetGenesisBlock(t *testing.T) {
	blockBytes, err := CreateGenesisBlock(req)
	assert.NoError(t, err)

	block := &cb.Block{}
	err = proto.Unmarshal(blockBytes, block)
	assert.NoError(t, err)

	var buffer bytes.Buffer
	err = protolator.DeepMarshalJSON(&buffer, block)
	assert.NoError(t, err)
}
